--- a/public/assets/css/homepage.css
+++ b/public/assets/css/homepage.css
@@ -21,6 +21,13 @@
     font-weight: 600;
 }
 
+.my-container{
+    width: 100%;
+    margin: 0 auto;
+}
+
+#profile, #repositories, #highlight, #team{ padding: 15px; }
+
 /*HEADER*/
 header{
     display: flex;
@@ -68,6 +75,11 @@ header{
 #profile{
     display: flex;
     gap: 25px;
+}
 
-    padding: 15px;
+    /*REPOSITORIES*/
+#repositories{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 15px;
 }
